--- a/Rahul_NLP_Assignment_1__1.ipynb
+++ b/Rahul_NLP_Assignment_1__1.ipynb
@@ -17,7 +17,7 @@
         "id": "bc97d6da"
       },
       "source": [
-        "## CS 6120: Natural Language Processing - Prof. Ahmad Uzair\n",
+        "## CS 6120: Natural Language Processing \n",
         "\n",
         "### Assignment 1: Naive Bayes\n",
         "### Total Points: 100 points\n",
